fixed assorted overflow issues in chrome browsers

--- a/styles/partials/_about.scss
+++ b/styles/partials/_about.scss
@@ -55,7 +55,7 @@
             }
         }
         i {
-            font-size: 3.3rem;
+            font-size: 2.55rem;
             &:hover {
                 opacity: 0.5;
             }
