--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -40,7 +40,7 @@
             }
         }
         i {
-            font-size: 3.3rem;
+            font-size: 2.55rem;
             &:hover {
                 opacity: 0.5;
             }
