--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -10,12 +10,12 @@ h1,
 h2,
 h3,
 p {
-    letter-spacing: 0.25rem;
+    letter-spacing: 0.15rem;
     color: rgba(14, 55, 14, 0.95);
 }
 
 h1 {
-    font-size: clamp(3.5rem, 8vw, 7rem);
+    font-size: clamp(3rem, 8vw, 7rem);
     font-weight: 500;
     margin: 30px auto;
 }
@@ -25,12 +25,13 @@ h2 {
 }
 
 p {
-    font-size: 1.5rem;
+    font-size: clamp(1rem, 2vw, 2.5rem);
     font-family: $bodyFont;
 }
 
 li,
 a {
     color: rgba(14, 55, 14, 0.95);
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.15rem;
+    font-size: clamp(1rem, 2vw, 2.5rem);
 }
